# CAN-Guru

./: CHANGELOG.md  LICENSE  README.md  build.bat  build.sh  can-guru.spec  pyproject.toml  requirements.txt
canguru/: __init__.py  app.py  interface.py  message.py  utils.py
canguru/gui/: __init__.py  guru.py  guru.ui  trace.py
canguru/gui/mdi_area/: __init__.py  databases.py  setup.py  trace.py
canguru/gui/top_tab_widget/: interface.py  run.py
canguru/j1939/: __init__.py  data_link.py
